--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
 </head>
 <body>
     <div id="seleccionCampeon"></div>
-    <div id="tienda">
-        <div id="wards">
-            <h2>Wards</h2>
-        </div>
-        <div id="itemsNormales"></div>
-    </div>
+    <div id="tienda"></div>
     <script src="./script.js"></script>
 </body>
 </html>
